Web Speech API: `speechSynthesis.clear()` removes utterances from following `speechSynthesis.speak(...)` as well https://bugs.webkit.org/show_bug.cgi?id=191745 rdar://46151521

Reviewed by Tyler Wilcock.

Because cancel() callbacks happen asynchronously on the platform synthesizer, they can clear out the wrong utterance.

Test: fast/speechsynthesis/speech-synthesis-cancel-queued-utterances.html

* LayoutTests/fast/speechsynthesis/speech-synthesis-cancel-queued-utterances-expected.txt: Added.
* LayoutTests/fast/speechsynthesis/speech-synthesis-cancel-queued-utterances.html: Added.
* Source/WebCore/Modules/speech/SpeechSynthesis.cpp:
(WebCore::SpeechSynthesis::cancel):
(WebCore::SpeechSynthesis::handleSpeakingCompleted):
* Source/WebCore/platform/mock/PlatformSpeechSynthesizerMock.cpp:
(WebCore::PlatformSpeechSynthesizerMock::cancel):

Canonical link: https://commits.webkit.org/309349@main